# port4k

./: .env.example  Caddyfile  Cargo.toml  LICENSE  Makefile  README.md  docker-compose.yml  reseed_db.sh
.github/workflows/: rust-ci.yml  web-ci.yml.disabled
docs/: commands.txt  lua_api.md  room_zone_stuff.md  telnet.md
docs/architecture/: command_lifecycle.md  command_result.md  lua_policy.md  roomview_merge.md  state_layers.md  terminal_commands.md
docs/examples/: room_import.schema.json
docs/examples/rooms/: PUZZLE_WALKTHROUGH.md  cell_block.yaml  docking_airlock.yaml  engineering_bay.yaml  entry_hall.yaml  hallway_1.yaml  maintenance_bay.yaml  maintenance_corridor.yaml  observation_deck.yaml  observation_nook.yaml
docs/examples/rooms_old/: entry_hall.yaml  hallway_1.yaml  maintenance_bay.yaml  observation_nook.yaml  ship_airlock.yaml
docs/story/: into.txt
migrations/: V11__items.sql  V1__new_initial_setup.sql  V2__account_zone_items.sql  V3__update_index.sql  V6__kv.sql  V8__drop_unused.sql
port4k-admin/: Cargo.toml
port4k-admin/src/: main.rs
port4k-core/: Cargo.toml
port4k-core/src/: lib.rs
port4k-server/: .env.example  Cargo.toml  autoexec  refinery.toml  seed-the-hub.sql  seed.sql
port4k-server/migrations/: V10_user_zone_data.sql  V11__blueprints.sql  V11__items.sql  V12__blueprints_scripts.sql  V13__blueprint_state.sql  V14__locks.sql  V15__yaml_rooms.sql  V16__objects_scripts.sql  V17_drop_json_objects_scripts.sql  V1__initial_setup.sql  V1__users.sql  V2__worlds.sql  V3__scripts.sql  V4__account_auth.sql  V4__import_updates.sql  V5__remove_o.sql  V6__kv.sql  V6__seed_start.sql  V7__characters.sql  V7__exits.sql  V8__currency_and_loot.sql  V9__jsonb.sql  V9__seed_loot.sql
port4k-server/seeds/: seed-the-hub.sql  seed.sql
port4k-server/src/: ansi.rs  banner.rs  commands.rs  config.rs  db.rs  domain.rs  domain_obs.rs  error.rs  hardening.rs  hardering.rs  http.rs  import.rs  import_blueprint.rs  input.rs  lib.rs  lua.rs  main.rs  models.rs  net.rs  parser.rs  prelogin.rs  prelogin.rs_old  readline.rs  renderer.rs  rendering.rs  services.rs  state.rs  telnet.rs  util.rs
port4k-server/src/commands/: balance.rs  blueprint.rs  bp.rs  debug_cmd.rs  examine.rs  fallback.rs  go.rs  login.rs  logout.rs  look.rs  lua.rs  open.rs  playtest.rs  register.rs  script.rs  search.rs  take.rs  who.rs
port4k-server/src/commands/blueprint/: entry.rs  exit.rs  import.rs  new.rs  room.rs  submit.rs  utils.rs
port4k-server/src/db/: accounts.rs  blueprint.rs  characters.rs  error.rs  loot.rs  migrations.rs  models.rs  pool.rs  repo.rs  rooms.rs  types.rs
port4k-server/src/db/blueprint/: kv.rs  rooms.rs  scripts.rs
port4k-server/src/db/models/: account.rs  blueprint.rs  character.rs  room.rs  zone.rs
port4k-server/src/db/repo/: account.rs  account_db.rs  db_account.rs  db_kv.rs  db_room.rs  db_zone.rs  inventory_db.rs  kv.rs  kv_db.rs  object.rs  room.rs  room_db.rs  user.rs  user_db.rs  zone.rs  zone_db.rs
port4k-server/src/input/: parser.rs  readline.rs  shell.rs
port4k-server/src/lua/: table.rs
port4k-server/src/models/: account.rs  blueprint.rs  character.rs  inventory.rs  room.rs  room_helpers.rs  types.rs  zone.rs
port4k-server/src/net/: connection.rs  http.rs  output.rs  sink.rs  telnet.rs
port4k-server/src/net/sink/: telnet.rs  websocket.rs
port4k-server/src/net/telnet/: connection.rs  crlf_wrapper.rs  slow_writer.rs
port4k-server/src/renderer/: ansi.rs  objects.rs  parser.rs  room_view.rs  vars.rs
port4k-server/src/scripting/: editor.rs
port4k-server/src/services/: account.rs  account_service.rs  auth.rs  auth_service.rs  blueprint.rs  cursor.rs  error.rs  inventory.rs  navigator.rs  room.rs  zone.rs
port4k-server/src/state/: registry.rs  session.rs
port4k-server/src/util/: args.rs  handlers.rs  hint.rs  serde.rs  telnet.rs  visibility.rs
port4k-server/tests/: render_spec.rs
port4k-site/: game.html  index.html
seeds/: seed.sql
src/: commands.rs  db.rs  error.rs  game.rs  import_blueprint.rs  lib.rs  lua.rs  main.rs  models.rs  net.rs  realm_manager.rs  renderer.rs  services.rs  state.rs
src/commands/: blueprint.rs  debug_cmd.rs  examine.rs  fallback.rs  go.rs  inventory.rs  login.rs  logout.rs  look.rs  lua.rs  open.rs  playtest.rs  register.rs  search.rs  take.rs  who.rs
src/commands/blueprint/: entry.rs  exit.rs  import.rs  new.rs  room.rs  submit.rs
src/db/: blueprint.rs  error.rs  loot.rs  repo.rs
src/db/repo/: account.rs  account_db.rs  inventory.rs  inventory_db.rs  kv.rs  realm.rs  realm_db.rs  room.rs  room_db.rs  user.rs  user_db.rs  zone_db.rs
src/input/: parser.rs  readline.rs  shell.rs
src/models/: account.rs  blueprint.rs  inventory.rs  realm.rs  room.rs  types.rs
src/net/: http.rs  output.rs  telnet.rs
src/net/sink/: telnet.rs  websocket.rs
src/net/telnet/: connection.rs  slow_writer.rs
src/renderer/: ansi.rs  vars.rs
src/services/: account.rs  auth.rs  blueprint.rs  cursor.rs  error.rs  inventory.rs  navigator.rs  realm.rs  room.rs
src/services/realm/: storage_db.rs  storage_mem.rs
src/state/: interactive.rs  registry.rs  session.rs
src/util/: args.rs  telnet.rs
tests/: render_spec.rs
website/: index.html
website/client/: index.html
