[package]
name = "port4k"
version = "0.1.0"
edition = "2024"
description = "A MUD concept written in Rust"
license="MIT"
authors = ["Joshua Thijssen <jthijssen@noxlogic.nl>"]

[[bin]]
name = "import-yaml"
path = "src/bin/import-yaml.rs"

[dependencies]
axum = { version = "0.8.6", features = ["ws", "http1", "http2", "json"] }
tower-http = { version = "0.6.6", features = ["cors"] }
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4", "with-serde_json-1"] }
deadpool-postgres = { version = "0.14.1", features = ["rt_tokio_1"] }
refinery = { version = "0.9.0", features = ["tokio-postgres"] }
serde = { version = "1", features = ["derive"] }
toml = "0.9.8"
dotenvy = "0.15"
argon2 = "0.5"
password-hash = { version = "0.5", features = ["std"] }
rand_core = { version = "0.9.3", features = ["os_rng"] }
mlua = { version = "0.11.4", features = ["luau", "vendored", "send", "async"] }
serde_json = "1"
parking_lot = "0.12.4"
futures = "0.3.31"
serde_yaml = "0.9.33"
regex = "1.11.3"
once_cell = "1.21.3"
chrono = "0.4.42"
postgres-types = { version = "0.2", features = ["derive", "with-uuid-1"] }
uuid = { version = "1", features = ["v4", "serde"] }
async-trait = "0.1.89"
dashmap = "7.0.0-rc2"
tracing-error = "0.2"
color-eyre = "0.6"
rand = "0.9.2"
clap = { version = "4.5.49", features = ["derive"] }
bytes = "1.10.1"
anyhow = "1.0.100"
thiserror = "2.0.16"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["fmt", "env-filter"] }
tokio = { version = "1.47.1", features = ["rt-multi-thread", "macros", "net", "io-util", "sync"] }
