[package]
name = "port4k-server"
version = "0.1.0"
edition = { workspace = true }
license = { workspace = true }
authors = { workspace = true }


[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true }
#port4k-core = { path = "../port4k-core" }
axum = { version = "0.7", features = ["ws", "http1", "http2", "json"] }
#tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
#http = "1.3.1"
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4", "with-serde_json-1"] }
deadpool-postgres = { version = "0.14.1", features = ["rt_tokio_1"] }
refinery = { version = "0.8", features = ["tokio-postgres"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
dotenvy = "0.15"
argon2 = "0.5"
password-hash = { version = "0.5", features = ["std"] }
rand_core = "0.6"
mlua = { version = "0.9", features = ["luau", "vendored", "send", "async"] }
serde_json = "1"
parking_lot = "0.12.4"
futures = "0.3.31"
serde_yaml = "0.9.33"
regex = "1.11.3"
once_cell = "1.21.3"
#bytes = "1.10.1"
chrono = "0.4.42"
postgres-types = { version = "0.2", features = ["derive", "with-uuid-1"] }
uuid = { version = "1", features = ["v4", "serde"] }
#sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres", "uuid"] }
async-trait = "0.1.89"
dashmap = "7.0.0-rc2"
tracing-error = "0.2"
color-eyre = "0.6"